Use AdoptOpenJDK